# DataStructures_Tree

./: .gitignore  README.md  main.cpp  measurement.cpp
interfaces/: CMakeLists.txt  cli.cpp  cli.h  gui.cpp  gui.h
results/: LinearFit.py  TreePerformance.txt
src/: avl_tree.cpp  avl_tree.h  dancing_tree.cpp  dancing_tree.h  splay_tree.cpp  splay_tree.h  t_tree.cpp  t_tree.h  tree_structure.h
